# ProjetoProg_RUST_1.77.0

./: .env  .gitignore  Cargo.toml  compose.yml
EXECUCAO_de_codigo/Struct/: structRust.rs
EXECUCAO_de_codigo/enum_com_tupla/: enum_com_tupla.rs
EXECUCAO_de_codigo/enum_com_valor_string/: enum_com_valor_string.rs
EXECUCAO_de_codigo/enum_generico/: enum_generico.ts
EXECUCAO_de_codigo/enum_simples_pessoa_fisicajuridica/: enum_simples_pessoa_fisicajuridica.rs
EXECUCAO_de_codigo/hashmaps/: hashmaps_basico.rs
EXECUCAO_de_codigo/src/: main.rs
EstudoRust02/: Cargo.toml
EstudosDeRUST/Aula_06/: Cargo.toml  cargo_debug_lldb.sh  package-lock.json
EstudosDeRUST/Aula_Exercicios/: Cargo.toml
EstudosDeRUST/Aula_Exercicios_1/: Cargo.toml
EstudosDeRUST/CursoDesafioRUST_Youtube/: Cargo.toml
EstudosDeRUST/CursoDesafioRust_YoutubeTratamentoDeString/: Cargo.toml
EstudosDeRUST/primeirosProgramas/: Cargo.toml
Rust_ApiRest_01/: Cargo.toml
Rust_ApiRest_01/EXECUCAO_de_codigo/: Cargo.toml
Rust_ApiRest_01/EXECUCAO_de_codigo/Struct/: struct_com_methodos.rs
Rust_ApiRest_01/EXECUCAO_de_codigo/enum_comlexo/: enum_comlexo.ts
Rust_ApiRest_01/EXECUCAO_de_codigo/enum_simples/: enum_simples.rs
Rust_ApiRest_01/EXECUCAO_de_codigo/src/: main.rs
Rust_ApiRest_01/src/: settings.rs
Rust_ApiRest_01/src/controller/: books.rs  health.rs  mod.rs
estudo-doc-rust-00/: Cargo.toml
estudo-doc-rust-00/src/: main.rs
estudorust/: Cargo.toml
src/: errors.rs  main.rs
src/controller/: mod.rs
src/enums/: bookEnum.rs  mod.rs
src/model/: book_model.rs  mod.rs
(+19 files in other folders)
